--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -5,7 +5,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Repo
-            - uses: actions/checkout@v4
+              uses: actions/checkout@v4
 
             - name: Welcome message
               run: echo "My First github actions job"
