--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -7,11 +7,17 @@ jobs:
             - name: Checkout Repo
               uses: actions/checkout@v4
 
-            - name: Welcome message
-              run: echo "My First github actions job"
+            - name: Welcome message and list and read files
+              run: |
+                echo "My First github actions job"
+                ls -ltra
+                cat README.md
 
-            - name: List files
-              run: ls
-              
-            - name: Read File
-              run: cat README.md  
+            - name: Generate ASCII Artwork
+              run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
+                   
+            #- name: List files
+            #  run: ls -ltra
+                              
+          #  - name: Read File
+          #     run: cat README.md  
