--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -7,13 +7,12 @@ jobs:
             - name: Checkout Repo
               uses: actions/checkout@v4
 
-            - name: Install cowsay projgram
+            - name: Install cowsay program
               run: sudo apt-get install cowsay -y
 
             - name: Execute Cowsay CMD
               run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
                
-
             - name: Test file exists
               run: grep -i "dragon" dragon.txt
 
